hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/instance_method_private.php.exp
File "instance_method_private.php", line 7, characters 5-14:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_private.php", line 7, characters 5-6:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "instance_method_private.php", line 7, characters 13-13:
Invalid argument (Typing[4110])
  File "instance_method_private.php", line 12, characters 24-33:
  Expected `ExampleInt`
  File "instance_method_private.php", line 7, characters 13-13:
  But got `int`
File "instance_method_private.php", line 7, characters 9-11:
You cannot access this method (Typing[4112])
  File "instance_method_private.php", line 12, characters 20-22:
  This member is private
File "instance_method_private.php", line 7, characters 9-11:
Cannot access non-public members within expression trees. (Typing[4448])
  File "instance_method_private.php", line 12, characters 20-22:
  Member defined here
